--- a/frontend/src/styles/Category.css
+++ b/frontend/src/styles/Category.css
@@ -1,5 +1,3 @@
-.categories-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+ul {
+    list-style-type: none;
 }
